# end-to-end-workflow

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
api/: urls.py  views.py
backend/: settings.py  urls.py
home/: views.py
templates/: main.html
users/: models.py  signals.py
users/migrations/: 0001_initial.py
